# font-browser

./: .hgignore  .hgtags  AUTHORS  ChangeLog  Makefile.am  README.md  bootstrap  configure.ac  font-browser.desktop  font-browser.gresource.xml  font-browser.py  font-browser.spec.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en@quot.gmo  es.po  font-browser.pot  fr.po  it.po  ja.po  pt_BR.po
resources/: font-browser.glade
